welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:23: error: not found: value color
setCouleurCorps(color.GREEN);
                ^